--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3",
-    "nodemon": "^2.0.15"
+    "nanoid": "^3.3.4",
+    "nodemon": "^2.0.15",
+    "npm-build": "^0.0.1"
   }
 }
